<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dylan.riskcalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id = "@+id/titles"
        android:layout_width="fill_parent"
        android:layout_height="20dp">
        <TextView
            android:id = "@+id/attackers"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="wrap_content"
            android:text="@string/attackers"/>
        <TextView
            android:id = "@+id/defenders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:text="@string/defenders"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titles"
        android:id = "@+id/scores">
        <EditText
            android:inputType="number"
            android:hint = "@string/numAttackers"
            android:id="@+id/numAttackers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent" >
        </EditText>
        <EditText
            android:inputType="number"
            android:hint = "@string/numDefenders"
            android:id="@+id/numDefenders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent" >
        </EditText>
    </LinearLayout>

    <Button
        android:background="?android:attr/selectableItemBackground"        android:id = "@+id/oneeach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oneeach"
        android:layout_below="@+id/scores"
        android:onClick="oneEach" />

    <LinearLayout
        android:id = "@+id/lose2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oneeach">
        <Button
            android:background="?android:attr/selectableItemBackground"            android:id = "@+id/attackersLose"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/attackerslosetwo"
            android:onClick="attackersLose" />

        <Button
            android:background="?android:attr/selectableItemBackground"            android:id = "@+id/defendersLose"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="wrap_content"
            android:text="@string/defenderslosetwo"
            android:onClick="defendersLose" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lose2"
        android:id="@+id/lose1">
        <Button
            android:background="?android:attr/selectableItemBackground"            android:id = "@+id/attackersLose1"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="wrap_content"
            android:text="@string/attackersloseone"
            android:onClick="attackersLose1" />
        <Button
            android:background="?android:attr/selectableItemBackground"            android:id = "@+id/defendersLose1"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="wrap_content"
            android:text="@string/defendersloseone"
            android:onClick="defendersLose1" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/lose1"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/rect">
    </LinearLayout>

</RelativeLayout>
